--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "watch": "webpack -w -d",
     "build": "NODE_ENV=production webpack -p",
     "lint": "node_modules/.bin/esw webpack.config.* src --color",
-    "lint:watch": "npm run lint -- --watch"
+    "lint:watch": "npm run lint -- --watch",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [
     "react"
   ],
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
+    "testPathIgnorePatterns": [
+      "<rootDir>/__tests__/setup/"
+    ]
+  },
   "author": "jgladden",
   "license": "ISC",
   "devDependencies": {
@@ -30,14 +38,19 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^3.5.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^23.6.0",
     "node-sass": "^4.9.2",
     "npm-run-all": "^4.0.2",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^1.0.1",
