--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "^3.0.2",
+    "fetch-mock": "^7.0.7",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^23.6.0",
