--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "NODE_ENV=production webpack -p",
     "lint": "node_modules/.bin/esw webpack.config.* src --color",
     "lint:watch": "npm run lint -- --watch",
-    "test": "jest --verbose",
+    "test": "jest",
     "test:watch": "jest --watch"
   },
   "keywords": [
