--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "jgladden",
   "license": "ISC",
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
@@ -49,10 +50,10 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "^3.0.2",
-    "fetch-mock": "^7.0.7",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^23.6.0",
+    "moxios": "^0.4.0",
     "node-sass": "^4.9.2",
     "npm-run-all": "^4.0.2",
     "redux-mock-store": "^1.5.3",
@@ -63,13 +64,12 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "director": "^1.2.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "rxjs": "^5.5.2",
-    "whatwg-fetch": "^3.0.0"
+    "redux-thunk": "^2.3.0"
   }
 }
