--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
@@ -51,8 +50,9 @@
     "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "moxios": "^0.4.0",
     "node-sass": "^4.9.2",
     "npm-run-all": "^4.0.2",
@@ -60,11 +60,13 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^1.1.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "director": "^1.2.8",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
