update build and dev server

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "react-boilerplate",
+  "name": "react_redux_farrung",
   "version": "1.0.0",
-  "description": "React Boilerplate configured with babel, webpack, sass and eslint.",
+  "description": "portfolio site",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jgladden/react_boilerplate.git"
+    "url": "https://github.com/jgladden/react_redux_farrung.git"
   },
   "main": "src/index.js",
   "scripts": {
     "start": "npm-run-all --parallel dev:server lint:watch",
-    "dev:server": "webpack-dev-server --hot --inline",
-    "watch": "webpack -w -d",
-    "build": "NODE_ENV=production webpack -p",
+    "dev:server": "webpack-dev-server --mode development --config webpack.base.config.js --hot --open --env.PLATFORM=local",
+    "prebuild": "webpack --mode production --config webpack.prod.config.js --env.PLATFORM=production --progress",
+    "build": "node server",
     "lint": "node_modules/.bin/esw webpack.config.* src --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "jest",
@@ -33,41 +33,49 @@
   "author": "jgladden",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "axios-mock-adapter": "^1.15.0",
-    "babel-core": "^6.24.1",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "babel-loader": "^8.0.4",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^5.7.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-watch": "^2.1.14",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.4",
     "moxios": "^0.4.0",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.10.0",
     "npm-run-all": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "redux-mock-store": "^1.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
     "director": "^1.2.8",
+    "express": "^4.16.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
