--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   "presets": [
-    "@babel/preset-env",
+  [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "targets": "> 1%, last 2 versions"
+      }
+    ],
     "@babel/preset-react"
   ],
   "plugins": [
