--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios-mock-adapter": "^1.15.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
