--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   ],
   "jest": {
     "moduleNameMapper": {
+      "^actions(.*)$": "<rootDir>/src/actions$1",
+      "^reducers(.*)$": "<rootDir>/src/reducers$1",
+      "^components(.*)$": "<rootDir>/src/components$1",
+      "^containers(.*)$": "<rootDir>/src/containers$1",
+      "^utils(.*)$": "<rootDir>/src/utils$1",
+      "^config(.*)$": "<rootDir>/src/config$1",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js"
     },
@@ -34,7 +40,7 @@
   "author": "jgladden",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
@@ -43,7 +49,9 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "axios-mock-adapter": "^1.15.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
